<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Water Quality Monitoring App</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="guest">Continue as Guest</string>
    <string name="title">H20</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="common_header">common header</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="create_account">Create an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
</resources>





